<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">

  <EditText
    android:id="@+id/loginUsernameEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Username" />

  <EditText
    android:id="@+id/loginPasswordEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:hint="Password"
    android:inputType="textPassword" />

  <Button
    android:id="@+id/loginSubmitButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Login" />

</LinearLayout>
